--- a/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
@@ -1,7 +1,7 @@
 <% allow_return_item_changes = !@return_authorization.customer_returned_items? %>
 
 <div data-controller="return-items">
-  <div class="table-responsive card-lg p-0 mb-4">
+  <div class="table-responsive card-lg mb-4">
     <table class="table table-condensed return-items-table">
       <thead class="text-muted">
         <tr>
