--- a/admin/app/views/spree/admin/post_categories/index.html.erb
+++ b/admin/app/views/spree/admin/post_categories/index.html.erb
@@ -5,7 +5,7 @@
 <%= render 'spree/admin/shared/posts_tabs' %>
 
 <% if @post_categories.any? %>
-  <div class="card-lg p-0">
+  <div class="card-lg">
     <div class="table-responsive rounded-lg">
       <table class="table">
         <thead class="text-muted">
