--- a/admin/app/views/spree/admin/reports/_report.html.erb
+++ b/admin/app/views/spree/admin/reports/_report.html.erb
@@ -1,4 +1,4 @@
-<div class="card-lg p-0">
+<div class="card-lg">
   <div class="table-responsive">
     <table class="table">
       <thead class="text-muted">
