--- a/admin/app/views/spree/admin/return_authorizations/index.html.erb
+++ b/admin/app/views/spree/admin/return_authorizations/index.html.erb
@@ -2,7 +2,7 @@
   <%= Spree.t(:return_authorizations) %>
 <% end %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <%= render "spree/admin/return_authorizations/filters" %>
   <%= render "spree/admin/return_authorizations/list" %>
 
