--- a/admin/app/views/spree/admin/shared/_refunds.html.erb
+++ b/admin/app/views/spree/admin/shared/_refunds.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive card-lg p-0">
+<div class="table-responsive card-lg">
   <table class="table table-condensed" id='refunds' data-order-id='<%= @order.number %>'>
     <thead class="text-muted">
       <tr data-hook="refunds_header" class="border-bottom">
