--- a/admin/app/views/spree/admin/stock_items/index.html.erb
+++ b/admin/app/views/spree/admin/stock_items/index.html.erb
@@ -6,7 +6,7 @@
   <%= render "spree/admin/shared/stock_nav" %>
 <% end %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <%= render "filters" %>
 
   <% if @stock_items.any? %>
