--- a/admin/app/views/spree/admin/stores/form/_policies.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_policies.html.erb
@@ -8,7 +8,7 @@
   </div>
 <% end %>
 
-<div class="card-lg">
+<div class="card-lg p-4">
   <h5 class="mb-3"><%= Spree.t(:terms_of_service) %></h5>
   <div class="row">
     <div class="col-lg-4">
