--- a/admin/app/views/spree/admin/themes/index.html.erb
+++ b/admin/app/views/spree/admin/themes/index.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 <% end %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <div class="table-responsive rounded-lg">
     <table class="table">
       <thead class="text-muted">
@@ -44,7 +44,7 @@
 </div>
 
 <% if available_themes.any? %>
-  <div class="card-lg p-0">
+  <div class="card-lg">
     <div class="card-header">
       <h5 class="card-title">Add a new theme</h5>
     </div>
