--- a/admin/app/views/spree/admin/custom_domains/index.html.erb
+++ b/admin/app/views/spree/admin/custom_domains/index.html.erb
@@ -5,7 +5,7 @@
   <%= Spree.t(:domains) %>
 <% end %>
 
-<div class="card-lg">
+<div class="card-lg p-4">
   <h5 class="mb-3">Internal URL</h5>
   <div class="row mb-4">
     <div class="col-lg-4">
