--- a/admin/app/views/spree/admin/customer_returns/index.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.html.erb
@@ -5,9 +5,9 @@
 <% content_for :page_title do %>
   <%= Spree.t(:customer_returns) %>
 <% end %>
-<div class="card-lg p-0">
+<div class="card-lg">
 
-  <%= search_form_for [:admin, @search], url: spree.admin_customer_returns_path, class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
+  <%= search_form_for [:admin, @search], url: spree.admin_customer_returns_path, class: "filter-wrap", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
     <%= render "spree/admin/shared/filters_search_bar",
     param: :number_cont,
     label: Spree.t(:number) %>
