--- a/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
@@ -24,51 +24,53 @@ locals: {
   </div>
 <% end %>
 
-<div class="table-responsive card-lg p-0 mb-4">
-  <table class="table table-condensed return-items-table">
-    <thead class="text-muted">
-      <tr>
-        <th><%= Spree.t(:product) %></th>
-        <th><%= Spree.t(:status) %></th>
-        <th><%= Spree.t(:purchased_quantity) %></th>
-        <th><%= Spree.t(:return_quantity) %></th>
-        <th><%= Spree.t(:total) %></th>
-        <th><%= Spree.t(:refund_amount) %></th>
-        <th><%= Spree.t(:reimbursement_type) %></th>
-        <th><%= Spree.t(:exchange_for) %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @return_authorization.return_items.each do |return_item| %>
+<div class="card-lg mb-4">
+  <div class="table-responsive">
+    <table class="table table-condensed return-items-table">
+      <thead class="text-muted">
         <tr>
-          <td>
-            <div class="variant-name">
-              <%= link_to return_item.inventory_unit.variant.name,
-              spree.edit_admin_product_path(return_item.inventory_unit.variant.product) %>
-            </div>
-            <div class="variant-options"><%= return_item.inventory_unit.variant.options_text %></div>
-          </td>
-          <td><%= return_item.inventory_unit.state.humanize %></td>
-          <td class="purchased-quantity">
-            <%= return_item.line_item.quantity %>
-          </td>
-          <td><%= return_item.return_quantity %></td>
-          <td><%= return_item.pre_tax_amount %></td>
-          <td><%= return_item.display_total %></td>
-          <td><%= if return_item.preferred_reimbursement_type.present?
-              return_item.preferred_reimbursement_type.name.humanize
-            else
-              "-"
-            end %></td>
-          <td><%= if return_item.exchange_processed?
-              return_item.exchange_variant.exchange_name
-            else
-              "-"
-            end %></td>
+          <th><%= Spree.t(:product) %></th>
+          <th><%= Spree.t(:status) %></th>
+          <th><%= Spree.t(:purchased_quantity) %></th>
+          <th><%= Spree.t(:return_quantity) %></th>
+          <th><%= Spree.t(:total) %></th>
+          <th><%= Spree.t(:refund_amount) %></th>
+          <th><%= Spree.t(:reimbursement_type) %></th>
+          <th><%= Spree.t(:exchange_for) %></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @return_authorization.return_items.each do |return_item| %>
+          <tr>
+            <td>
+              <div class="variant-name">
+                <%= link_to return_item.inventory_unit.variant.name,
+                spree.edit_admin_product_path(return_item.inventory_unit.variant.product) %>
+              </div>
+              <div class="variant-options"><%= return_item.inventory_unit.variant.options_text %></div>
+            </td>
+            <td><%= return_item.inventory_unit.state.humanize %></td>
+            <td class="purchased-quantity">
+              <%= return_item.line_item.quantity %>
+            </td>
+            <td><%= return_item.return_quantity %></td>
+            <td><%= return_item.pre_tax_amount %></td>
+            <td><%= return_item.display_total %></td>
+            <td><%= if return_item.preferred_reimbursement_type.present?
+                return_item.preferred_reimbursement_type.name.humanize
+              else
+                "-"
+              end %></td>
+            <td><%= if return_item.exchange_processed?
+                return_item.exchange_variant.exchange_name
+              else
+                "-"
+              end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <% if @return_authorization.reason.present? %>
