--- a/admin/app/views/spree/admin/pages/index.html.erb
+++ b/admin/app/views/spree/admin/pages/index.html.erb
@@ -5,7 +5,7 @@
   <%= link_to_with_icon 'plus', Spree.t(:add_new_page), spree.new_admin_page_path, class: "btn btn-primary" if can?(:create, Spree::Page.new) %>
 <% end %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <%= render "spree/admin/pages/filters" %>
   <% if @pages.any? %>
     <div class="table-responsive">
@@ -20,7 +20,7 @@
           <%= render collection: @pages, partial: "spree/admin/pages/page", cached: spree_base_cache_scope %>
         </tbody>
       </table>
-      <%= render partial: "spree/admin/shared/index_table_options", locals: { collection: @pages } %>
+      <%= render partial: "spree/admin/shared/index_table_options", collection: @pages %>
     </div>
   <% else %>
     <%= render 'spree/admin/shared/no_resource_found' %>
