--- a/admin/app/views/spree/admin/posts/index.html.erb
+++ b/admin/app/views/spree/admin/posts/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= render 'spree/admin/shared/posts_tabs' %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <%= render "spree/admin/posts/filters" %>
 
   <% if @posts.any? %>
