--- a/admin/app/views/spree/admin/properties/index.html.erb
+++ b/admin/app/views/spree/admin/properties/index.html.erb
@@ -9,22 +9,19 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_property), new_object_url, { class: "btn-primary", icon: "plus" } %>
+  <%= link_to_with_icon 'plus', Spree.t(:new_property), new_object_url, class: "btn btn-primary" %>
 <% end if can?(:create, Spree::Property)  %>
 
-<div class="card-lg p-0">
-
-  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
+<div class="card-lg">
+  <%= search_form_for [:admin, @search], class: "filter-wrap", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
     <%= render 'spree/admin/shared/filters_search_bar', param: :name_cont, label: Spree.t(:name) %>
-
     <%= render "spree/admin/shared/filter_badge_template" %>
-
     <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
   <% end %>
 
   <% if @properties.present? %>
     <div class="table-responsive">
-      <table class="table" id='listing_properties'>
+      <table class="table">
         <thead class="text-muted">
           <tr>
             <th class="no-border handel-head"></th>
@@ -33,7 +30,7 @@
             <th><%= Spree.t(:kind) %></th>
             <th><%= Spree.t(:products) %></th>
             <th><%= Spree.t(:visibility) %></th>
-            <th class="actions"></th>
+            <th></th>
           </tr>
         </thead>
         <tbody
@@ -45,9 +42,13 @@
           <%= render partial: "spree/admin/properties/property", collection: @collection, cached: spree_base_cache_scope %>
         </tbody>
       </table>
-      <%= render "spree/admin/shared/index_table_options", collection: @collection, simple: true %>
+      <%= render "spree/admin/shared/index_table_options", collection: @collection %>
     </div>
   <% else %>
     <%= render "spree/admin/shared/no_resource_found" %>
   <% end %>
 </div>
+
+<p class="documentation-link-container">
+  <%= external_link_to "Learn more about properties", "https://spreecommerce.org/docs/user/manage-products/product-properties" %>
+</p>
