--- a/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
@@ -16,7 +16,7 @@
       <% end %>
 
       <% if can?(:manage, :checkouts) %>
-        <%= nav_item(Spree.t(:draft_orders), spree.admin_checkouts_path, active: params[:controller] == 'checkouts') %>
+        <%= nav_item(Spree.t(:draft_orders), spree.admin_checkouts_path) %>
       <% end %>
 
       <%= render_admin_partials(:store_orders_nav_partials) %>
