--- a/admin/app/views/spree/admin/shipping_methods/_actions.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/_actions.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_actions do %>
   <% if can?(:create, Spree::ShippingMethod) %>
-    <%= button_link_to Spree.t(:new_shipping_method), new_object_url, class: "btn-primary", icon: 'plus' %>
+    <%= link_to_with_icon 'plus', Spree.t(:new_shipping_method), new_object_url, class: "btn btn-primary" %>
   <% end %>
 <% end %>
