--- a/admin/app/views/spree/admin/store_credit_categories/edit.html.erb
+++ b/admin/app/views/spree/admin/store_credit_categories/edit.html.erb
@@ -6,8 +6,10 @@
 <%= render 'spree/admin/shared/error_messages', target: @store_credit_category %>
 
 <%= form_for [:admin, @store_credit_category] do |f| %>
-  <fieldset>
-    <%= render 'form', f: f %>
-    <%= render 'spree/admin/shared/edit_resource_links', f: f %>
-  </fieldset>
+  <div class="card mb-4">
+    <div class="card-body">
+      <%= render 'form', f: f %>
+    </div>
+  </div>
+  <%= render 'spree/admin/shared/edit_resource_links', f: f %>
 <% end %>
