--- a/admin/app/views/spree/admin/store_credits/index.html.erb
+++ b/admin/app/views/spree/admin/store_credits/index.html.erb
@@ -5,11 +5,11 @@
   <% end %>
 
   <% content_for :page_actions do %>
-    <%= button_link_to Spree.t(:add_store_credit), spree.new_admin_user_store_credit_path(@user), class: "btn-primary", icon: 'plus' if can?(:create, Spree::StoreCredit) %>
+    <%= link_to_with_icon 'plus', Spree.t(:add_store_credit), spree.new_admin_user_store_credit_path(@user), class: "btn btn-primary" if can?(:create, Spree::StoreCredit) %>
   <% end %>
 <% end %>
 
-<div class="card-lg p-0">
+<div class="card-lg">
   <% if params[:frame_name].present? %>
     <%= turbo_frame_tag params[:frame_name], autoscroll: true, data: { autoscroll_block: :nearest, autoscroll_behavior: :smooth } do %>
       <%= render 'list' %>
