--- a/admin/app/views/spree/admin/tax_categories/index.html.erb
+++ b/admin/app/views/spree/admin/tax_categories/index.html.erb
@@ -3,28 +3,30 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_tax_category), new_object_url, class: "btn-primary", icon: 'plus', id: 'admin_new_tax_categories_link' %>
+  <%= link_to_with_icon 'plus', Spree.t(:new_tax_category), new_object_url, class: "btn btn-primary" %>
 <% end if can? :create, Spree::TaxCategory %>
 
-<%= render partial: 'spree/admin/shared/tax_nav' %>
+<%= render 'spree/admin/shared/tax_nav' %>
 
-<% if @tax_categories.any? %>
-  <div class="table-responsive card-lg p-0">
-    <table class="table" id='listing_tax_categories'>
-      <thead class="text-muted">
-        <tr>
-          <th><%= Spree.t(:name) %></th>
-          <th><%= Spree.t(:tax_code) %></th>
-          <th><%= Spree.t(:description) %></th>
-          <th><%= Spree.t(:default) %></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render collection: @tax_categories, partial: 'spree/admin/tax_categories/tax_category', cached: spree_base_cache_scope %>
-      </tbody>
-    </table>
-  </div>
-<% else %>
-  <%= render 'spree/admin/shared/no_resource_found' %>
-<% end %>
+<div class="card-lg">
+  <% if @collection.any? %>
+    <div class="table-responsive">
+      <table class="table">
+        <thead class="text-muted">
+          <tr>
+            <th><%= Spree.t(:name) %></th>
+            <th><%= Spree.t(:tax_code) %></th>
+            <th><%= Spree.t(:description) %></th>
+            <th><%= Spree.t(:default) %></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render collection: @collection, partial: 'spree/admin/tax_categories/tax_category', cached: spree_base_cache_scope %>
+        </tbody>
+      </table>
+    </div>
+  <% else %>
+    <%= render 'spree/admin/shared/no_resource_found' %>
+  <% end %>
+</div>
