--- a/admin/app/views/spree/admin/taxonomies/index.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/index.html.erb
@@ -3,11 +3,11 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_taxonomy), new_object_url, { class: "btn-primary", icon: "plus" } %>
+  <%= link_to_with_icon 'plus', Spree.t(:new_taxonomy), new_object_url, class: "btn btn-primary" %>
 <% end if can?(:create, Spree::Taxonomy) %>
 
-<div class="card-lg p-0">
-  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
+<div class="card-lg">
+  <%= search_form_for [:admin, @search], class: "filter-wrap", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
     <%= render 'spree/admin/shared/filters_search_bar', param: :name_cont, label: Spree.t(:name) %>
 
     <%= render "spree/admin/shared/filter_badge_template" %>
@@ -22,7 +22,7 @@
             <th class="no-border handel-head"></th>
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:taxons) %></th>
-            <th class="actions"></th>
+            <th></th>
           </tr>
         </thead>
         <tbody
