--- a/admin/app/views/spree/admin/taxonomies/show.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/show.html.erb
@@ -4,8 +4,8 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_taxon), spree.new_admin_taxonomy_taxon_path(@taxonomy), icon: 'plus', class: 'no-wrap btn btn-primary align-self-center' %>
-<% end %>
+  <%= link_to_with_icon 'plus', Spree.t(:new_taxon), spree.new_admin_taxonomy_taxon_path(@taxonomy), class: 'btn btn-primary' %>
+<% end if can?(:create, Spree::Taxon) %>
 
 <% content_for :page_actions_dropdown do %>
   <%= link_to_edit(@taxonomy.root, url: spree.edit_admin_taxonomy_taxon_path(@taxonomy, @taxonomy.root.id), class: 'text-left dropdown-item') %>
