--- a/admin/app/views/spree/admin/webhooks_subscribers/_form.html.erb
+++ b/admin/app/views/spree/admin/webhooks_subscribers/_form.html.erb
@@ -9,7 +9,7 @@
       <div class="card-body">
         <div class="row">
           <div class="form-group col-12">
-            <%= f.label :url, raw(Spree.t('admin.url') + required_span_tag) %>
+            <%= f.label :url, raw(Spree.t(:url) + required_span_tag) %>
             <%= f.text_field :url, class: 'form-control', placeholder: 'https://example.com/endpoint' %>
             <%= f.error_message_on :url %>
           </div>
